[package]
name = "osclet-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.4.2", features = ["derive"] }

[dependencies.osclet]
path = ".."
default-features = false

[features]
default = []
neon = ["osclet/neon"]
avx = ["osclet/avx"]
sse = ["osclet/sse"]

[[bin]]
name = "single_prec_wave"
path = "single_prec_wave/single_prec_wave.rs"
test = false
doc = false
bench = false

[[bin]]
name = "double_prec_wave"
path = "double_prec_wave/double_prec_wave.rs"
test = false
doc = false
bench = false

[[bin]]
name = "single_modwt"
path = "single_modwt/single_modwt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "double_modwt"
path = "double_modwt/double_modwt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "single_cdf97"
path = "single_cdf97/single_cdf97.rs"
test = false
doc = false
bench = false

[[bin]]
name = "double_cdf97"
path = "double_cdf97/double_cdf97.rs"
test = false
doc = false
bench = false